--- a/src/componentes/Banner/newBannerCarrosel/gameSwiper.css
+++ b/src/componentes/Banner/newBannerCarrosel/gameSwiper.css
@@ -1,18 +1,38 @@
 .swiper {
-    width: 90%;
-    padding-bottom: 30px ;
+    width: 80%;
+    padding-bottom: 30px;
+    left: -5%;
+    margin-top: 100px; /* Adiciona um espaço acima do swiper */
 }
 
-.swipper-slide{
+
+.swiper .swiper-slide {
     width: 550px;
-    height: 350px;
+    height: 100%;
 }
 
-/* .gameSlider{
+
+.gameSlider {
+   
+}
+
+.gameSlider::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 30px !important;
+}
+
+.swiper-slide img {
     position: relative;
-    width: 50px;
-    height: 500px;
-    background-position: center;
-    background-size: cover;
-    Overflow: hidden;
+    left: 0;
+    top: 0;
+    width: 80%; 
+    height: 80%; 
+    object-fit: cover;
+    margin: auto; 
+    display: block; 
 }
